# obsidian-metadata

./: .gitignore  .obsidian_frontmatter.env  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  README.md  codecov.yml  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
.github/: dependabot.yml  labeler.yml
.github/actions/setup-poetry/: action.yml
.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  devcontainer-checker.yml  labeler.yml  pr-linter.yml  pypi-release.yml  python-code-checker.yml
scripts/: pre-commit-hook.sh  update_dependencies.py
src/obsidian_frontmatter/: __init__.py  __version__.py  cli.py
src/obsidian_frontmatter/_utils/: __init__.py  alerts.py  config.py  utilities.py  vault.py
src/obsidian_metadata/: __init__.py  __version__.py  cli.py
src/obsidian_metadata/_config/: __init__.py  config.py  default.toml
src/obsidian_metadata/_utils/: __init__.py  alerts.py  console.py  questions.py  utilities.py
src/obsidian_metadata/models/: __init__.py  application.py  enums.py  exceptions.py  metadata.py  notes.py  parsers.py  patterns.py  questions.py  vault.py
tests/: __init__.py  alerts_test.py  application_test.py  cli_test.py  config_test.py  conftest.py  helpers.py  metadata_frontmatter_test.py  metadata_inline_test.py  metadata_tags_test.py  metadata_test.py  metadata_vault_test.py  notes_test.py  parsers_test.py  patterns_test.py  questions_test.py  utilities_test.py  vault_test.py
tests/fixtures/: CP1250.md  broken_config_file.toml  broken_frontmatter.md  multiple_vaults.toml  sample_vault_config.toml  short_textfile.md  test_vault_config.toml
tests/fixtures/sample_vault/+inbox/: Untitled.md
tests/fixtures/sample_vault/.obsidian/: workspace.json
tests/fixtures/sample_vault/00 meta/templates/: daily note.md  data sample.md
tests/fixtures/sample_vault/01 frontmatter/: frontmatter 1.md  frontmatter 2.md  frontmatter 3.md  frontmatter 4.md
tests/fixtures/sample_vault/02 inline/: inline 2.md  inline 4.md
tests/fixtures/sample_vault/03 mixed/: mixed 1.md
tests/fixtures/sample_vault/04 no metadata/: no_metadata_1.md
tests/fixtures/test_vault/: no_metadata.md  sample_note.md  test1.md
tests/fixtures/test_vault/ignore_folder/: file_to_ignore.md
tests/notes/: note_init_test.py  note_methods_test.py
